# PyGraphTEASAR

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_on_push_and_pr.yml
GraphTEASAR/: __init__.py  find_root.py  skeletonize_mesh.py  utils.py
docs/: conf.py  index.rst
docs/api/: GraphTEASAR.rst  modules.rst
docs/guide/: intro.rst
scripts/: release.sh
tests/: test_spatialgraphs.py
