[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "GraphTEASAR"
version = "0.1.1"
description = "A python library for running the TEASAR algorithm on spatial graphs for skeletonization."
authors = ["Forrest Collman <forrestc@alleninstute.org>", "Casey Schneider-Mizell <caseys@alleninstitute.org>"]
repository = "https://github.com/AllenInstitute/PyGraphTEASAR"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.0"
scipy = "^1.3.0"
tqdm = "^4.46.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

