[tool.poetry]
name = "GraphTEASAR"
version = "0.1.1"
description = "A python library for running the TEASAR algorithm on spatial graphs for skeletonization."
authors = ["Forrest Collman <forrestc@alleninstute.org>", "Casey Schneider-Mizell <caseys@alleninstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18.0"
scipy = "^1.3.0"
tqdm = "^4.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
